Re 10152: Removed width to avoid horizontal scrollbar.

--- a/core/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/core/src/zeit/content/article/edit/browser/resources/editor.css
@@ -865,5 +865,4 @@ h1#pagetitle {
   margin-left: 5px;
   position: absolute;
   top: 5px;
-  width: 100%;
 }
